# scraperwiki-python

./: Dockerfile  Makefile  README  README.rst  benchmark.py  pyproject.toml  save_speedtest.py  setup.py  tests.py
.github/workflows/: ci-build.yml  codeql-analysis.yml
scraperwiki/: __init__.py  sql.py  utils.py
tests/: test_scraperwiki.py
