[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraperwiki"
version = "0.5.1"
description = "Local version of ScraperWiki libraries"
authors = [
  { name = "ScraperWiki Developers", email = "hello@scraperwiki.com" }
]
license = { text = "GPLv3+" }
readme = "README.md"  # Assumes you have a README file
urls = { Repository = "https://github.com/cantabular/scraperwiki-python" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: SQL",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "requests==2.32.5",
    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
]

[tool.setuptools.packages.find]
where = ["."]  # Or wherever your 'scraperwiki' package folder is located
include = ["scraperwiki*"]
